@@ -1,6 +1,8 @@
 			   XPCE ChangeLog
 			   ==============
 
+* FIXED: Removed incomplete reference to library('overview.hlp').
+
 * FIXED: Stop combobox browser from scrolling after a loc-still.
 
 * UI: PceEmacs: swapped ok/cancel buttons in M-x argument prompter.
